--- a/learningmcmc.ipynb
+++ b/learningmcmc.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimate Posterior using MCMC\n",
+    "study group tutorial 16jan19 / jplewis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -221,13 +229,15 @@
     "$\n",
     "\n",
     "(details)\n",
+    "$$\n",
     "\\begin{align*}\n",
     "&   \\log \\frac{1}{\\sqrt{2 \\pi \\sigma^2}}\n",
     "\\\\\n",
     "&= \\log 1  - \\log ( 2 \\pi \\sigma^2 )^{1/2}\n",
     " \\\\\n",
     "&=   0  - \\frac{1}{2} \\log{ 2 \\pi \\sigma^2}\n",
-    "\\end{align*}"
+    "\\end{align*}\n",
+    "$$"
    ]
   },
   {
@@ -404,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -20671,15 +20683,6 @@
     "p_.plot(xx,yy,\"r-\")\n",
     "p_.plot(x,y,\"go\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
