--- a/metropolisDistribution.ipynb
+++ b/metropolisDistribution.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metroplis sampling from a distribution "
+    "## Metroplis sampling from a distribution \n",
+    "study group tutorial 16jan19 / jplewis"
    ]
   },
   {
