--- a/FourierTransformsAndSpectralMesh.ipynb
+++ b/FourierTransformsAndSpectralMesh.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "biharmonic:  $L^2$\n",
     "\n",
-    "![chladni - biharmonic (Gander/Wanner)](Otherfigs/chladni_ganderWanner.png \"Chaldni - eigs of biharmonic\")\n",
+    "![chladni - biharmonic (Gander/Wanner)](FourierSpectralMeshFigs/chladni_ganderWanner.png \"Chaldni - eigs of biharmonic\")\n",
     "\n",
     "Gander/Wanner"
    ]
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "### caricature (boost mid freqs e.g.)\n",
-    "![boost mid or low freqs](Spectralmesh/eigdinocaricature.png \"caricature\")"
+    "![boost mid or low freqs](FourierSpectralMeshFigs/eigdinocaricature.png \"caricature\")"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "metadata": {},
    "source": [
     "### horse harmonics\n",
-    "![horse harmonics](Spectralmesh/eigHorses.png \"harmonics\")"
+    "![horse harmonics](FourierSpectralMeshFigs/eigHorses.png \"harmonics\")"
    ]
   },
   {
@@ -284,8 +284,8 @@
    "metadata": {},
    "source": [
     "### fourier approximation\n",
-    "![fourier approximation](Spectralmesh/eigHorseShape3.png \"approx\")\n",
-    "![fourier approximation](Spectralmesh/eigHorseShapes2.png \"approx\")"
+    "![fourier approximation](FourierSpectralMeshFigs/eigHorseShape3.png \"approx\")\n",
+    "![fourier approximation](FourierSpectralMeshFigs/eigHorseShapes2.png \"approx\")"
    ]
   },
   {
