--- a/FourierTransformsAndSpectralMesh.ipynb
+++ b/FourierTransformsAndSpectralMesh.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![fourierbasis](laplacespectrum1d.png \"fourier basis functions...\")"
+    "![fourierbasis](FourierSpectralMeshFigs/laplacespectrum1d.png \"fourier basis functions...\")"
    ]
   },
   {
@@ -295,7 +295,8 @@
     "### why Laplacian\n",
     "- The manifold laplacian is \"intrinsic\", and is the simplest thing that requires (is determined by) a metric.  \n",
     "- The first derivative can be made to vanish at any particular point by a change of coordinates. Manifold laplacian does not depend on coordinates\n",
-    "- Manifold laplacian != graph laplacian BUT graph laplacian proved to converge to manifold laplacian with particular choice of adjacency"
+    "- Manifold laplacian != graph laplacian BUT graph laplacian proved to converge to manifold laplacian with particular choice of adjacency\n",
+    "- Recall Fourier was solving the heat equation, which involves the Laplacian."
    ]
   },
   {
