add intro comment

--- a/metropolisDistribution.ipynb
+++ b/metropolisDistribution.ipynb
@@ -11,10 +11,20 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using Distributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the Distributions Beta() function here. At first glance this might seem circular - if this function already exists, why not just use it. However, note that Beta() will be called with a sample (location) and returns its probability, whereas Metropolis sampling produces sample locations that are consistent with the probability density. In one dimension this could also be done by indirecting a U(0,1) random number through the inverse CDF, howver Metropolis sampling is easier, especially in high dimensions. \n",
+    "A bigger advantage occurs when drawing samples from a posterior. In that case, computing the denominator p(x) is usually impractical, however when a probability scaled by an unknown constant is used in the Metropolis procedure, the constant cancels in the ratio (in mcmc1() below).\n"
    ]
   },
   {
